# specplotter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
specplotter/: __init__.py  cli.py  specplotter.py
tests/: __init__.py  test_cli.py  test_specplotter.py
